--- a/assets/scss/partials/_modal.scss
+++ b/assets/scss/partials/_modal.scss
@@ -50,11 +50,6 @@
 	.modal-content {
 		padding:  0.5rem 24px 4rem 24px;
 
-		p {
-			padding: 0.85rem 0;
-			margin-bottom: 0.5rem;
-		}
-
 		&.two-col {
 			display: flex;
 			justify-content: space-between;
